<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="109dp">

        <ImageView
            android:id="@+id/background"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/background_image" />

        <View
            android:id="@+id/transparentGradient"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/gradient_bottom_to_top"
            app:layout_constraintBottom_toBottomOf="@+id/background"
            app:layout_constraintEnd_toEndOf="@+id/background"
            app:layout_constraintStart_toStartOf="@+id/background"
            app:layout_constraintTop_toTopOf="@+id/background" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/arrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="59dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back"
            app:tint="@color/icon_base" />

        <TextView
            android:id="@+id/textBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/back"
            android:textColor="@color/icon_base"
            app:layout_constraintBottom_toBottomOf="@+id/arrowBack"
            app:layout_constraintStart_toEndOf="@+id/arrowBack"
            app:layout_constraintTop_toTopOf="@+id/arrowBack" />

        <TextView
            android:id="@+id/textAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:text="@string/age"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/background"
            app:layout_constraintStart_toEndOf="@+id/guidelineStart" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/avengers_end_game"
            android:textColor="@color/text_title"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textAge" />

        <TextView
            android:id="@+id/textMoveTypes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/action_adventure_fantasy"
            android:textColor="@color/text_accent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textTitle" />

        <ImageView
            android:id="@+id/star1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textMoveTypes"
            app:srcCompat="@drawable/ic_star"
            app:tint="@color/icon_active" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/star1"
            app:layout_constraintStart_toEndOf="@+id/star1"
            app:layout_constraintTop_toTopOf="@+id/star1"
            app:srcCompat="@drawable/ic_star"
            app:tint="@color/icon_active" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/star2"
            app:layout_constraintStart_toEndOf="@+id/star2"
            app:layout_constraintTop_toTopOf="@+id/star2"
            app:srcCompat="@drawable/ic_star"
            app:tint="@color/icon_active" />

        <ImageView
            android:id="@+id/star4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/star3"
            app:layout_constraintStart_toEndOf="@+id/star3"
            app:layout_constraintTop_toTopOf="@+id/star3"
            app:srcCompat="@drawable/ic_star"
            app:tint="@color/icon_active" />

        <ImageView
            android:id="@+id/star5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/star4"
            app:layout_constraintStart_toEndOf="@+id/star4"
            app:layout_constraintTop_toTopOf="@+id/star4"
            app:srcCompat="@drawable/ic_star"
            app:tint="@color/icon_base" />

        <TextView
            android:id="@+id/textReviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/reviews"
            android:textColor="@color/text_secondary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/star5"
            app:layout_constraintStart_toEndOf="@+id/star5"
            app:layout_constraintTop_toTopOf="@+id/star5" />

        <TextView
            android:id="@+id/textStoryline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/storyline"
            android:textColor="@color/text_title"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/star1" />

        <TextView
            android:id="@+id/textStorylineDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/storyline_description"
            android:textColor="@color/text_description"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textStoryline" />

        <TextView
            android:id="@+id/textCast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cast"
            android:textColor="@color/text_title"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textStorylineDescription" />

        <ImageView
            android:id="@+id/cast1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/robert_downey_jr"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/cast2"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textCast" />

        <TextView
            android:id="@+id/textCast1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/robert_downey_jr"
            android:textColor="@color/text_cast_item"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cast1"
            app:layout_constraintStart_toStartOf="@+id/cast1"
            app:layout_constraintTop_toBottomOf="@+id/cast1" />

        <ImageView
            android:id="@+id/cast2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/chris_evans"
            app:layout_constraintBottom_toBottomOf="@+id/cast1"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/cast3"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/cast1"
            app:layout_constraintTop_toTopOf="@+id/cast1" />

        <TextView
            android:id="@+id/textCast2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/chris_evans"
            android:textColor="@color/text_cast_item"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cast2"
            app:layout_constraintStart_toStartOf="@+id/cast2"
            app:layout_constraintTop_toTopOf="@+id/textCast1" />

        <ImageView
            android:id="@+id/cast3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/mark_ruffalo"
            app:layout_constraintBottom_toBottomOf="@+id/cast2"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/cast4"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/cast2"
            app:layout_constraintTop_toTopOf="@+id/cast2" />

        <TextView
            android:id="@+id/textCast3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mark_ruffalo"
            android:textColor="@color/text_cast_item"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cast3"
            app:layout_constraintStart_toStartOf="@+id/cast3"
            app:layout_constraintTop_toTopOf="@+id/textCast2" />

        <ImageView
            android:id="@+id/cast4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/chris_hemsworth"
            app:layout_constraintBottom_toBottomOf="@+id/cast3"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/cast3"
            app:layout_constraintTop_toTopOf="@+id/cast3" />

        <TextView
            android:id="@+id/textCast4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/chris_hemsworth"
            android:textColor="@color/text_cast_item"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cast4"
            app:layout_constraintStart_toStartOf="@+id/cast4"
            app:layout_constraintTop_toTopOf="@+id/textCast3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

