<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/steel_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/aim_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/movie_list_header"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="@+id/movie_list_header"
            app:srcCompat="@drawable/ic_aim"/>

        <TextView
            android:id="@+id/movie_list_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="55dp"
            android:text="@string/movies_list"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/aim_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movie_list_item"
            android:layout_width="170dp"
            android:layout_height="296dp"
            android:layout_marginTop="33dp"
            android:background="@drawable/background_rect_with_border"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/movie_list_header">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/item_guideline_start"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="8dp"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/item_guideline_end"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_end="8dp" />

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="match_parent"
                android:layout_height="248dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/movie_avengers" />

            <View
                android:id="@+id/item_transparent_gradient"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/gradient_bottom_to_top"
                app:layout_constraintBottom_toBottomOf="@+id/item_image"
                app:layout_constraintEnd_toEndOf="@+id/item_image"
                app:layout_constraintStart_toStartOf="@+id/item_image"
                app:layout_constraintTop_toTopOf="@+id/item_image" />

            <TextView
                android:id="@+id/item_text_age"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_rect"
                android:gravity="center"
                android:text="@string/age"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/item_guideline_start"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/item_icon_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                app:layout_constraintEnd_toStartOf="@+id/item_guideline_end"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_like"
                app:tint="@color/white_transparent" />

            <TextView
                android:id="@+id/item_move_types"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/action_adventure_fantasy"
                android:textColor="@color/radical_red_darker"
                android:textSize="8sp"
                app:layout_constraintBottom_toTopOf="@id/item_text_reviews"
                app:layout_constraintEnd_toStartOf="@+id/item_guideline_end"
                app:layout_constraintStart_toEndOf="@+id/item_guideline_start" />

            <ImageView
                android:id="@+id/star_1"
                android:layout_width="8dp"
                android:layout_height="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/item_text_reviews"
                app:layout_constraintStart_toEndOf="@+id/item_guideline_start"
                app:layout_constraintTop_toTopOf="@+id/item_text_reviews"
                app:srcCompat="@drawable/ic_star"
                app:tint="@color/radical_red" />

            <ImageView
                android:id="@+id/star_2"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginStart="2dp"
                app:layout_constraintStart_toEndOf="@+id/star_1"
                app:layout_constraintTop_toTopOf="@+id/star_1"
                app:srcCompat="@drawable/ic_star"
                app:tint="@color/radical_red" />

            <ImageView
                android:id="@+id/star_3"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginStart="2dp"
                app:layout_constraintStart_toEndOf="@+id/star_2"
                app:layout_constraintTop_toTopOf="@+id/star_1"
                app:srcCompat="@drawable/ic_star"
                app:tint="@color/radical_red" />

            <ImageView
                android:id="@+id/star_4"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginStart="2dp"
                app:layout_constraintStart_toEndOf="@+id/star_3"
                app:layout_constraintTop_toTopOf="@+id/star_1"
                app:srcCompat="@drawable/ic_star"
                app:tint="@color/radical_red" />

            <ImageView
                android:id="@+id/star_5"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginStart="2dp"
                app:layout_constraintStart_toEndOf="@+id/star_4"
                app:layout_constraintTop_toTopOf="@+id/star_1"
                app:srcCompat="@drawable/ic_star"
                app:tint="@color/storm_gray" />

            <TextView
                android:id="@+id/item_text_reviews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/reviews"
                android:textColor="@color/storm_gray"
                android:textSize="8sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/item_image"
                app:layout_constraintEnd_toStartOf="@+id/item_guideline_end"
                app:layout_constraintStart_toEndOf="@+id/star_5" />

            <TextView
                android:id="@+id/item_text_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/avengers_end_game_in_line"
                android:textColor="@color/gallery"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/item_guideline_end"
                app:layout_constraintStart_toEndOf="@+id/item_guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/item_image" />

            <TextView
                android:id="@+id/item_move_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/_137_min"
                android:textColor="@color/storm_gray"
                android:textSize="8sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/item_guideline_end"
                app:layout_constraintStart_toEndOf="@+id/item_guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/item_text_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
