<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/steel_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/background_image" />

        <View
            android:id="@+id/transparent_gradient"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/gradient_bottom_to_top"
            app:layout_constraintBottom_toBottomOf="@+id/background_image"
            app:layout_constraintEnd_toEndOf="@+id/background_image"
            app:layout_constraintStart_toStartOf="@+id/background_image"
            app:layout_constraintTop_toTopOf="@+id/background_image" />

        <TextView
            android:id="@+id/text_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="59dp"
            android:text="@string/back"
            android:textColor="@color/storm_gray"
            android:drawablePadding="8dp"
            app:layout_constraintStart_toEndOf="@+id/guideline_start"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableStartCompat="@drawable/ic_arrow_back"
            app:drawableTint="@color/storm_gray" />

        <TextView
            android:id="@+id/text_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/background_image"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/guideline_start"
            tools:text="13+"/>

        <TextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/gallery"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/text_age"
            tools:text="Avengers End Game"/>

        <TextView
            android:id="@+id/text_move_types"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/radical_red_darker"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/text_title"
            tools:text="Action, Adventure, Fantasy"/>

        <include
            android:id="@+id/stars"
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            layout="@layout/view_stars"
            app:layout_constraintBottom_toBottomOf="@+id/text_reviews"
            app:layout_constraintStart_toEndOf="@+id/guideline_start"
            app:layout_constraintTop_toTopOf="@+id/text_reviews"/>

        <TextView
            android:id="@+id/text_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/storm_gray"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            app:layout_constraintStart_toEndOf="@+id/stars"
            app:layout_constraintTop_toBottomOf="@+id/text_move_types"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            tools:text="125 Reviews"/>

        <TextView
            android:id="@+id/text_storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/storyline"
            android:textColor="@color/gallery"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/text_reviews" />

        <TextView
            android:id="@+id/text_storyline_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/white_transparent"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/text_storyline"
            tools:text="Storyline description \nStoryline description \nStoryline description"/>

        <TextView
            android:id="@+id/text_cast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cast"
            android:textColor="@color/gallery"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/text_storyline_description" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/casts_rv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/text_cast"
            tools:itemCount="5"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_movie_cast"
            tools:orientation="horizontal"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

